@@ -51,6 +51,10 @@ class TrytonConfigParser(ConfigParser.RawConfigParser):
         self.set('database', 'list', 'True')
         self.set('database', 'retry', 5)
         self.set('database', 'language', 'en_US')
+        self.add_section('cache')
+        self.set('cache', 'model', 200)
+        self.set('cache', 'record', 2000)
+        self.set('cache', 'field', 100)
         self.add_section('ssl')
         self.add_section('email')
         self.set('email', 'uri', 'smtp://localhost:25')
