@@ -1,3 +1,5 @@
+* Clean private context keyword in RPC
+* Add cache section in configuration
 * Use dualmethod on ModelStorage.save
 * New API for on_change: instance changes
 * Add restore_history_before on ModelSQL
